<resources>
    <string name="app_name">education</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="name_registration">Регистрация</string>
    <string name="email">Email</string>
    <string name="example_gmail_com">example@gmail.com</string>
    <string name="registration">Регистрация</string>
    <string name="enter">Вход</string>
    <string name="password">Пароль</string>
    <string name="enter_password">Введите пароль</string>
    <string name="create_account">У вас нету аккаунта?</string>
    <string name="repeat_password">Введите пароль еще раз</string>
    <string name="have_account">Уже есть аккаунт?</string>
    <string name="vk">ВКонтакте</string>
    <string name="od">Одноклассники</string>
    <string name="onboarding_text">Тысячи курсов \n в одном месте</string>
    <string name="onboarding_text_button">Продолжить</string>
</resources>