<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:orientation="vertical"
    android:paddingHorizontal="16dp"
    tools:context="com.example.education.feature_auth.presentation.auth.AuthFragment">

    <TextView
        style="@style/TextAppearance.AppCompat.TextViewVariantStyle.Header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:text="@string/enter" />

    <TextView
        style="@style/TextAppearance.AppCompat.TextViewVariantStyle.Title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:text="@string/email" />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:background="@drawable/shape_rounded_variants">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/textInputEmail"
            style="@style/TextAppearance.AppCompat.TextViewVariantStyle.TextInputHint"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:background="@android:color/transparent"
            android:hint="@string/example_gmail_com" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        style="@style/TextAppearance.AppCompat.TextViewVariantStyle.Title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/password" />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:background="@drawable/shape_rounded_variants">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/textInputPassword"
            style="@style/TextAppearance.AppCompat.TextViewVariantStyle.TextInputHint"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"

            android:background="@android:color/transparent"
            android:hint="@string/enter_password"
            android:inputType="textPassword" />
    </com.google.android.material.textfield.TextInputLayout>


    <Button
        android:id="@+id/button_login"
        style="@style/TextAppearance.AppCompat.TextViewVariantStyle.ButtonText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:background="@drawable/button_background"
        android:text="@string/enter"
        android:textAllCaps="false" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="16dp"
        android:orientation="horizontal">


        <!-- Статичный текст -->
        <TextView
            style="@style/TextAppearance.AppCompat.TextViewVariantStyle.HintText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/create_account" />

        <!-- Кликабельный текст "Войти" -->
        <TextView
            style="@style/TextAppearance.AppCompat.TextViewVariantStyle.HintText.Navigate"
            android:id="@+id/toRegistration"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="3dp"
            android:fontFamily="@font/roboto_semi_bold"
            android:text="@string/registration" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="32dp"
        android:background="@color/line_view_color" />

</LinearLayout>
